Tela de obras feitas - index.html

--- a/servicos-eletroge.html
+++ b/servicos-eletroge.html
@@ -163,8 +163,10 @@
         <div class="quadro-banner">Soluções sustentáveis</div>
       </div>
       <div class="quadro" style="background-image: url('img/img-servico1.avif');">
+        <a href="obras-model.html">
         <h2>Automação</h2>
         <div class="quadro-banner">Tecnologia e controle</div>
+        </a>
       </div>
     </div>
   </section>
