Melhora no visual do site

--- a/obras-model.html
+++ b/obras-model.html
@@ -22,7 +22,7 @@
   </nav>
 </header>
 <section class="banner-topo">
-  <img src="img/banner-topo.jpg" alt="Banner de topo" class="img-banner-topo" />
+  <img src="img/img-principal.jpg" alt="Banner de topo" class="img-banner-topo" />
   <div class="texto-banner-topo">
     <h1><strong>Nosso Repertório no Ramo Industrial</strong></h1>
   </div>
