--- a/servicos-eletroge.html
+++ b/servicos-eletroge.html
@@ -72,14 +72,14 @@
 
     .quadro {
       position: relative;
-      width: 200px;
-      height: 350px;
+      width: 350px;
+      height: 450px;
       background-size: cover;
       background-position: center;
       display: flex;
       align-items: center;
       justify-content: center;
-      color: black;
+      color: white;
       font-size: 1.2rem;
       font-weight: bold;
       cursor: pointer;
@@ -97,7 +97,7 @@
     }
 
     .quadro:hover::before {
-      background-color: rgba(204, 153, 0, 0.85);
+      background-color: rgba(211, 179, 78, 0.7);
     }
 
     .quadro h2 {
@@ -115,8 +115,8 @@
       bottom: 0;
       left: 0;
       width: 100%;
-      background-color: rgba(255, 255, 255, 0.9);
-      color: black;
+      background-color: #ffc270;
+      color: white;
       padding: 8px 0;
       text-align: center;
       transition: all 0.4s ease;
@@ -126,7 +126,7 @@
     .quadro:hover .quadro-banner {
       color: white;
       background-color: transparent;
-      transform: translateY(-140%);
+      transform: translateY(140%);
     }
 
     .img-eletroge-rodape {
