Melhora no visual do site

--- a/index.html
+++ b/index.html
@@ -147,6 +147,12 @@
     erat.
   </p>
 </section>
+<section class="obras-andamento">
+  <h1>Obras em Andamento</h1>
+  <p>Acompanhe nossos projetos em execução e veja como estamos levando energia de qualidade a mais clientes todos os dias.</p>
+  <button class="botao-andamento">Ver Projetos</button>
+</section>
+
 
 <footer>
   <div class="footer-section footer-yellow-light">
