--- a/obras-model.html
+++ b/obras-model.html
@@ -31,7 +31,7 @@
 
 <!-- NOVA SEÇÃO COM 16 QUADRADOS -->
 <section class="quadros-wrapper">
-  <h1>Nossos Produtos</h1>
+  <h1>Obras já concluídas</h1>
   <div class="grade-quadros">
     <!-- 16 quadrados com imagem de fundo e texto -->
     <!-- Substitua 'img/bg.jpg' pelas imagens reais -->
