feat: criacao da api do login no ambiente adm! proximo passo: inserir no front-end da pagina

--- a/public/public.adm/login.page.html
+++ b/public/public.adm/login.page.html
@@ -18,7 +18,7 @@
             <img
                 src="../img/coca-cola-img-industrial.jpg"
                 class="p-0 w-100 vh-100"
-                alt="oi"
+                alt=""
                 srcset=""
             />
             </div>
@@ -73,5 +73,6 @@
             </div>
         </div>
         </div>
+        <script src="adm.page.js"></script>
     </body>
     </html>
