--- a/public/public.adm/cadastrarObra.adm.html
+++ b/public/public.adm/cadastrarObra.adm.html
@@ -1,22 +1,61 @@
-    <!DOCTYPE html>
-    <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Cadastro de Obras</title>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cadastro de Obras</title>
 
-        <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        />
-        <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
-        />
-    </head>
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+    />
 
-    <body class="bg-white">
-        <nav class="navbar navbar-expand-lg bg-warning">
+    <style>
+.preview-wrapper {
+    position: relative;
+    width: 120px;
+    height: 120px;
+}
+
+.preview-wrapper img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 6px;
+}
+
+.remove-btn {
+    position: absolute;
+    top: 4px;
+    right: 4px;
+    background: rgba(0,0,0,0.6);
+    color: white;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    font-size: 14px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    opacity: 0;
+    transition: 0.2s;
+}
+
+.preview-wrapper:hover .remove-btn {
+    opacity: 1;
+}
+</style>
+
+</head>
+
+<body class="bg-white">
+    <nav class="navbar navbar-expand-lg bg-warning">
         <div class="container">
             <a class="navbar-brand text-dark fw-bold" href="#"
             ><img src="../img/logo-eletroge.png" width="100px"
@@ -47,93 +86,193 @@
             </ul>
             </div>
         </div>
-        </nav>
+    </nav>
 
-        <div class="container">
-        <h3 class="text-center mt-2">Cadastro de obras</h3>
-        <hr />
+    <div class="container">
+    <h3 class="text-center mt-2">Cadastro de obras</h3>
+    <hr />
 
-        <form action="" method="post">
-            <div class="row">
-            <div class="col-4">
-                <label for="work-name"><strong>Nome da obra</strong></label
-                ><br />
-                <input
-                class="input-group-text"
-                type="text"
-                name="work-name"
-                id="workName"
-                required
-                />
-            </div>
-            <div class="col-8">
-                <label for="work-description"
-                ><strong>Descrição da obra</strong></label
-                ><br />
-                <input
-                class="input-group input-group-text"
-                type="text"
-                name="work-name"
-                id="workName"
-                required
-                />
-            </div>
-            </div>
-            <div class="row mt-4">
-            <div class="col-3">
-                <label for="work-progress"><strong>Progresso</strong></label
-                ><br />
-                <input
-                class="input-group-text"
-                type="number"
-                name=""
-                id=""
-                min="0"
-                max="100"
-                required
-                />
-            </div>
-
-            <div class="col-6">
-                <p><strong>Selecione os seriços contidos na obra</strong></p>
-                <div class="m-1">
-                <input type="checkbox" name="work-service" id="1" />
-                <label for="work-service"
-                    >Alta Tensão
-                    <i class="fa-solid fa-bolt" style="color: #ffd43b"></i
-                ></label>
-                </div>
-                <div class="m-1">
-                <input type="checkbox" name="work-service" id="2" />
-                <label for="work-service"
-                    >SPDA
-                    <i class="fa-solid fa-plug" style="color: #ffd43b"></i></label
-                ><br />
-                </div>
-                <div class="m-1">
-                <input type="checkbox" name="work-service" id="3" />
-                <label for="work-service"
-                    >Predial
-                    <i class="fa-solid fa-building" style="color: #ffd43b"></i
-                ></label>
-                </div>
-                <div class="m-1">
-                <input type="checkbox" name="work-service" id="4" />
-                <label for="work-service"
-                    >Industrial
-                    <i class="fa-solid fa-industry" style="color: #ffd43b"></i
-                ></label>
-                </div>
-                <div class="m-1">
-                <input type="checkbox" name="work-service" id="5" />
-                <label for="work-service"
-                    >Quadros Elétricos
-                    <i class="fa-solid fa-hexagon-nodes-bolt" style="color: #FFD43B;"></i>
-                </label>
-                </div>
-            </div>
-            </div>
-        </form>
+    <div class="row">
+        <div class="col-4">
+        <label for="work-name"><strong>Nome da obra</strong></label
+        ><br />
+        <input
+            class="input-group-text"
+            type="text"
+            name="work-name"
+            id="workName"
+            required
+        />
         </div>
-    </body>
-    </html>
+        <div class="col-8">
+        <label for="work-description"
+            ><strong>Descrição da obra</strong></label
+        ><br />
+        <input
+            class="input-group input-group-text"
+            type="text"
+            name="work-name"
+            id="workName"
+            required
+        />
+        </div>
+    </div>
+    <div class="row mt-4">
+        <div class="col-4">
+        <label for="work-progress"><strong>Progresso</strong></label
+        ><br />
+        <input
+            class="input-group-text"
+            type="number"
+            name=""
+            id=""
+            min="0"
+            max="100"
+            required
+        />
+        </div>
+
+        <div class="col-8">
+        <p><strong>Selecione os seriços contidos na obra</strong></p>
+        <div class="m-1">
+            <input type="checkbox" name="work-service" id="1" />
+            <label for="work-service"
+            >Alta Tensão
+            <i class="fa-solid fa-bolt" style="color: #ffd43b"></i
+            ></label>
+        </div>
+        <div class="m-1">
+            <input type="checkbox" name="work-service" id="2" />
+            <label for="work-service"
+            >SPDA
+            <i class="fa-solid fa-plug" style="color: #ffd43b"></i></label
+            ><br />
+        </div>
+        <div class="m-1">
+            <input type="checkbox" name="work-service" id="3" />
+            <label for="work-service"
+            >Predial
+            <i class="fa-solid fa-building" style="color: #ffd43b"></i
+            ></label>
+        </div>
+        <div class="m-1">
+            <input type="checkbox" name="work-service" id="4" />
+            <label for="work-service"
+            >Industrial
+            <i class="fa-solid fa-industry" style="color: #ffd43b"></i
+            ></label>
+        </div>
+        <div class="m-1">
+            <input type="checkbox" name="work-service" id="5" />
+            <label for="work-service"
+            >Quadros Elétricos
+            <i
+                class="fa-solid fa-hexagon-nodes-bolt"
+                style="color: #ffd43b"
+            ></i>
+            </label>
+        </div>
+        </div>
+    </div>
+    <div class="row justify-content-center mt-4">
+<div class="row justify-content-center mt-4">
+    <div class="col-10">
+        <div class="mb-3">
+            <label for="send-img-work" class="form-label fw-bold">
+                Arraste ou selecione as imagens desejadas
+            </label>
+
+            <div
+                class="border border-2 rounded-3 p-4 text-center bg-light"
+                style="cursor: pointer"
+                onclick="document.getElementById('send-img-work').click()"
+            >
+                <i class="bi bi-cloud-upload fs-1 text-primary"></i>
+                <p class="mt-2 mb-0 text-secondary">
+                    Clique aqui ou arraste suas imagens
+                </p>
+            </div>
+
+            <input
+                type="file"
+                class="form-control d-none"
+                id="send-img-work"
+                name="send-img"
+                multiple
+            />
+
+            <!-- Área de preview -->
+            <div id="preview-area" class="mt-3 d-flex flex-wrap gap-3"></div>
+        </div>
+    </div>
+</div>
+
+
+        <div class="row justify-content-center mt-4">
+            <div class="col-10">
+                <div class="mb-3 text-center">
+                    <input type="button" onclick="createNewWork" class="btn btn-warning border" value="Cadastrar a Obra">
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+<script>
+const inputFile = document.getElementById("send-img-work");
+let selectedFiles = []; // controla arquivos reais
+
+inputFile.addEventListener("change", function (event) {
+    const files = Array.from(event.target.files);
+    selectedFiles = files; // salva lista atual
+    updatePreview();
+});
+
+// Atualiza os previews
+function updatePreview() {
+    const previewArea = document.getElementById("preview-area");
+    previewArea.innerHTML = "";
+
+    selectedFiles.forEach((file, index) => {
+        const reader = new FileReader();
+
+        reader.onload = (e) => {
+            const wrapper = document.createElement("div");
+            wrapper.classList.add("preview-wrapper");
+
+            const img = document.createElement("img");
+            img.src = e.target.result;
+
+            const removeBtn = document.createElement("div");
+            removeBtn.classList.add("remove-btn");
+            removeBtn.innerHTML = "×";
+            removeBtn.onclick = () => removeImage(index);
+
+            wrapper.appendChild(img);
+            wrapper.appendChild(removeBtn);
+            previewArea.appendChild(wrapper);
+        };
+
+        reader.readAsDataURL(file);
+    });
+
+    // reconstruir arquivos do input (obrigatório)
+    rebuildInputFiles();
+}
+
+// Remove uma imagem pelo índice
+function removeImage(index) {
+    selectedFiles.splice(index, 1);
+    updatePreview();
+}
+
+// Recria a FileList dentro do input (técnica obrigatória)
+function rebuildInputFiles() {
+    const dataTransfer = new DataTransfer();
+    selectedFiles.forEach(file => dataTransfer.items.add(file));
+    inputFile.files = dataTransfer.files;
+}
+</script>
+
+
+</body>
+</html>
