--- a/public/public.adm/cadastrarObra.adm.html
+++ b/public/public.adm/cadastrarObra.adm.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cadastro de Obras</title>
-
     <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -13,47 +12,41 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
     />
-
     <style>
-.preview-wrapper {
-    position: relative;
-    width: 120px;
-    height: 120px;
-}
-
-.preview-wrapper img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 6px;
-}
-
-.remove-btn {
-    position: absolute;
-    top: 4px;
-    right: 4px;
-    background: rgba(0,0,0,0.6);
-    color: white;
-    width: 24px;
-    height: 24px;
-    border-radius: 50%;
-    font-size: 14px;
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    opacity: 0;
-    transition: 0.2s;
-}
-
-.preview-wrapper:hover .remove-btn {
-    opacity: 1;
-}
-</style>
-
+    .preview-wrapper {
+        position: relative;
+        width: 120px;
+        height: 120px;
+    }
+    .preview-wrapper img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 6px;
+    }
+    .remove-btn {
+        position: absolute;
+        top: 4px;
+        right: 4px;
+        background: rgba(0, 0, 0, 0.6);
+        color: white;
+        width: 24px;
+        height: 24px;
+        border-radius: 50%;
+        font-size: 14px;
+        font-weight: bold;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        opacity: 0;
+        transition: 0.2s;
+    }
+    .preview-wrapper:hover .remove-btn {
+        opacity: 1;
+    }
+    </style>
 </head>
-
 <body class="bg-white">
     <nav class="navbar navbar-expand-lg bg-warning">
         <div class="container">
@@ -87,11 +80,9 @@
             </div>
         </div>
     </nav>
-
     <div class="container">
     <h3 class="text-center mt-2">Cadastro de obras</h3>
     <hr />
-
     <div class="row">
         <div class="col-4">
         <label for="work-name"><strong>Nome da obra</strong></label
@@ -131,7 +122,6 @@
             required
         />
         </div>
-
         <div class="col-8">
         <p><strong>Selecione os seriços contidos na obra</strong></p>
         <div class="m-1">
@@ -175,103 +165,89 @@
         </div>
     </div>
     <div class="row justify-content-center mt-4">
-<div class="row justify-content-center mt-4">
-    <div class="col-10">
+        <div class="col-10">
         <div class="mb-3">
             <label for="send-img-work" class="form-label fw-bold">
-                Arraste ou selecione as imagens desejadas
+            Arraste ou selecione as imagens desejadas
             </label>
-
             <div
-                class="border border-2 rounded-3 p-4 text-center bg-light"
-                style="cursor: pointer"
-                onclick="document.getElementById('send-img-work').click()"
+            class="border border-2 rounded-3 p-4 text-center bg-light"
+            style="cursor: pointer"
+            onclick="document.getElementById('send-img-work').click()"
             >
-                <i class="bi bi-cloud-upload fs-1 text-primary"></i>
-                <p class="mt-2 mb-0 text-secondary">
-                    Clique aqui ou arraste suas imagens
-                </p>
+            <i class="bi bi-cloud-upload fs-1 text-primary"></i>
+            <p class="mt-2 mb-0 text-secondary">
+                Clique aqui ou arraste suas imagens
+            </p>
             </div>
-
             <input
-                type="file"
-                class="form-control d-none"
-                id="send-img-work"
-                name="send-img"
-                multiple
+            type="file"
+            class="form-control d-none"
+            id="send-img-work"
+            name="send-img"
+            multiple
             />
-
             <!-- Área de preview -->
             <div id="preview-area" class="mt-3 d-flex flex-wrap gap-3"></div>
         </div>
+        </div>
     </div>
-</div>
-
-
-        <div class="row justify-content-center mt-4">
-            <div class="col-10">
-                <div class="mb-3 text-center">
-                    <input type="button" onclick="createNewWork()" class="btn btn-warning border" value="Cadastrar a Obra">
-                </div>
-            </div>
+    <div class="row justify-content-center mt-4">
+        <div class="col-10">
+        <div class="mb-3 text-center">
+            <input
+            type="button"
+            onclick="createNewWork()"
+            class="btn btn-warning border"
+            value="Cadastrar a Obra"
+            />
+        </div>
         </div>
     </div>
     </div>
-<script>
-const inputFile = document.getElementById("send-img-work");
-let selectedFiles = []; // lista real dos arquivos
-
-// Quando o usuário seleciona novas imagens
-inputFile.addEventListener("change", function (event) {
-    selectedFiles = Array.from(event.target.files); // substitui toda a lista
-    updatePreview();
-});
-
-// Atualiza os previews
-function updatePreview() {
-    const previewArea = document.getElementById("preview-area");
-    previewArea.innerHTML = "";
-
-    selectedFiles.forEach((file, index) => {
-        const reader = new FileReader();
-
-        reader.onload = (e) => {
-            const wrapper = document.createElement("div");
-            wrapper.classList.add("preview-wrapper");
-
-            const img = document.createElement("img");
-            img.src = e.target.result;
-
-            const removeBtn = document.createElement("div");
-            removeBtn.classList.add("remove-btn");
-            removeBtn.innerHTML = "×";
-            removeBtn.onclick = () => removeImage(index);
-
-            wrapper.appendChild(img);
-            wrapper.appendChild(removeBtn);
-            previewArea.appendChild(wrapper);
-        };
-
-        reader.readAsDataURL(file);
+    <script>
+    const inputFile = document.getElementById("send-img-work");
+    let selectedFiles = []; // lista real dos arquivos
+    // Quando o usuário seleciona novas imagens
+    inputFile.addEventListener("change", function (event) {
+        selectedFiles = Array.from(event.target.files); // substitui toda a lista
+        updatePreview();
     });
-}
-
-// Remove uma imagem da lista
-function removeImage(index) {
-    selectedFiles.splice(index, 1);
-    rebuildInputFiles();
-    updatePreview();
-}
-
-// Recria o FileList no input
-function rebuildInputFiles() {
-    const dt = new DataTransfer();
-    selectedFiles.forEach(f => dt.items.add(f));
-    inputFile.files = dt.files;
-}
-</script>
-
-
-<script src="adm.page.js"></script>
+    // Atualiza os previews
+    function updatePreview() {
+        const previewArea = document.getElementById("preview-area");
+        previewArea.innerHTML = "";
+        selectedFiles.forEach((file, index) => {
+            const reader = new FileReader();
+            reader.onload = (e) => {
+                const wrapper = document.createElement("div");
+                wrapper.classList.add("preview-wrapper");
+                const img = document.createElement("img");
+                img.src = e.target.result;
+                const removeBtn = document.createElement("div");
+                removeBtn.classList.add("remove-btn");
+                removeBtn.innerHTML = "×";
+                removeBtn.onclick = () => removeImage(index);
+                wrapper.appendChild(img);
+                wrapper.appendChild(removeBtn);
+                previewArea.appendChild(wrapper);
+            };
+            reader.readAsDataURL(file);
+        });
+    }
+    // Remove uma imagem da lista
+    function removeImage(index) {
+        selectedFiles.splice(index, 1);
+        rebuildInputFiles();
+        updatePreview();
+    }
+    // Recria o FileList no input
+    function rebuildInputFiles() {
+        const dt = new DataTransfer();
+        selectedFiles.forEach(f => dt.items.add(f));
+        inputFile.files = dt.files;
+    }
+    </script> 
+    <script src="adm.page.js"></script>
 </body>
 </html>
