--- a/public/public.adm/cadastrarObra.adm.html
+++ b/public/public.adm/cadastrarObra.adm.html
@@ -50,33 +50,28 @@
 <body class="bg-white">
     <nav class="navbar navbar-expand-lg bg-warning">
         <div class="container">
-            <a class="navbar-brand text-dark fw-bold" href="#"
+            <a class="navbar-brand text-dark fw-bold" href="dashboard.adm.html"
             ><img src="../img/logo-eletroge.png" width="100px"
             /></a>
 
             <div class="collapse navbar-collapse">
             <ul class="navbar-nav ms-auto gap-3">
-                <li class="nav-item">
-                <a class="nav-link text-dark fw-semibold" href="#"
-                    >Cadastrar Obra</a
-                >
-                </li>
-                <li class="nav-item">
-                <a class="nav-link text-dark fw-semibold" href="#"
-                    >Listar Obras</a
-                >
-                </li>
-                <li class="nav-item">
-                <a class="nav-link text-dark fw-semibold" href="#"
-                    >Editar Obras</a
-                >
-                </li>
-                <li class="nav-item">
-                <a class="nav-link text-dark fw-semibold" href="#"
-                    >Deletar Obras</a
-                >
-                </li>
-            </ul>
+                    <li class="nav-item">
+                    <a class="nav-link text-dark fw-semibold" href="cadastrarObra.adm.html"
+                        >Cadastrar Obra</a
+                    >
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link text-dark fw-semibold" href="editarObra.adm.html"
+                        >Editar Obras</a
+                    >
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link text-dark fw-semibold" href="deletarObra.adm.html"
+                        >Deletar Obras</a
+                    >
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
